k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-app
  labels:
    app: ml-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ml-app
  template:
    metadata:
      labels:
        app: ml-app
    spec:
      containers:
      - name: ml-app
        image: firassebai1/ml-app:latest
        imagePullPolicy: IfNotPresent  # Correct capitalization
        ports:
        - containerPort: 5000
