k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-app-service
spec:
  selector:
    app: ml-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
